[package]
name = "cargo-release"
description = "Cargo subcommand for you to smooth your release process."
version = "0.24.8"
license = "MIT OR Apache-2.0"
repository = "https://github.com/crate-ci/cargo-release"
readme = "README.md"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo"]
edition = "2021"
rust-version = "1.64.0"  # MSRV
include = [
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
  "examples/**/*"
]

[package.metadata.release]
pre-release-replacements = [
  {file="README.md", search="Current release: [a-z0-9\\.-]+", replace="Current release: {{version}}"} ,
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/crate-ci/cargo-release/compare/{{tag_name}}...HEAD", exactly=1},
]

[dependencies]
cargo_metadata = "0.15"
crates-index = "0.19"
# Enabling the features for `crates-index`
#
# crates-index enables git2/https by default, which in turns enable openssl-sys,
# openssl-probe and libgit2-sys/https (which also pulls on openssl-sys).
#
# Thus, we also need to enable git2/vendored-openssl here to build vendored
# version of openssl in additional to vendored-libgit2 so that `cargo-release`
# can be built without having to install libgit2 or openssl on the system and
# the binary can be run everywhere.
git2 = { version = "0.16.1", features = ["vendored-libgit2", "vendored-openssl"], default-features = false }
toml_edit = "0.19.8"
toml = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
semver = "1.0"
quick-error = "2.0"
regex = "1.7"
bstr = "1.4.0"
termcolor = "1.2.0"
maplit = "1.0"
indexmap = "1.9"
time = { version = "0.3", features = ["formatting", "macros"] }
dirs-next = "2.0"
ignore = "0.4"
difflib = "0.4"
itertools = "0.10"
once_cell = "1.17.1"
clap = { version = "4.2.1", features = ["derive", "wrap_help"] }
clap-cargo = { version = "0.10.0", features = ["cargo_metadata"] }
log = "0.4"
env_logger = "0.10"
globset = { version = "0.4.10", default-features = false }
dunce = "1.0.3"
trycmd = "0.14.15"
anyhow = "1.0.70"
concolor-control = { version = "0.0.7", features = ["auto"] }
git-conventional = "0.12.3"

[dev-dependencies]
assert_fs = "1.0"
predicates = "2.1"
cargo-test-macro.git = "https://github.com/rust-lang/cargo"
cargo-test-support.git = "https://github.com/rust-lang/cargo"
snapbox = "0.4.10"
